[gd_scene load_steps=5 format=3 uid="uid://c4j8kqm2xnl6y"]

[ext_resource type="Script" uid="uid://ofvrq76xctpi" path="res://Scenes/journal_ui.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://d0itfmafdjoyv" path="res://resource/UI/Journal/ART_UI_JOURNAL_Spread_01_BlankPages_WIP_TEST.png" id="2_spread1"]
[ext_resource type="Texture2D" uid="uid://cwcmj4uph7dws" path="res://resource/UI/Journal/ART_UI_JOURNAL_Spread_02_BlankPages_WIP_TEST.png" id="3_spread2"]
[ext_resource type="Texture2D" uid="uid://16ydohbj0124" path="res://resource/UI/Journal/ART_UI_JOURNAL_Spread_03_BlankPages_WIP_TEST.png" id="4_spread3"]

[node name="JournalUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="JournalContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spread1_Blueprint" type="Control" parent="JournalContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpreadTexture" type="TextureRect" parent="JournalContainer/Spread1_Blueprint"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_spread1")
expand_mode = 1
stretch_mode = 5

[node name="LeftPage" type="Control" parent="JournalContainer/Spread1_Blueprint"]
layout_mode = 1
anchor_left = 0.08
anchor_top = 0.1
anchor_right = 0.47
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="RightPage" type="Control" parent="JournalContainer/Spread1_Blueprint"]
layout_mode = 1
anchor_left = 0.53
anchor_top = 0.1
anchor_right = 0.92
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Spread2_Diary1" type="Control" parent="JournalContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpreadTexture" type="TextureRect" parent="JournalContainer/Spread2_Diary1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_spread2")
expand_mode = 1
stretch_mode = 5

[node name="LeftPage" type="Control" parent="JournalContainer/Spread2_Diary1"]
layout_mode = 1
anchor_left = 0.08
anchor_top = 0.1
anchor_right = 0.47
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="RightPage" type="Control" parent="JournalContainer/Spread2_Diary1"]
layout_mode = 1
anchor_left = 0.53
anchor_top = 0.1
anchor_right = 0.92
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Spread3_Diary2" type="Control" parent="JournalContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpreadTexture" type="TextureRect" parent="JournalContainer/Spread3_Diary2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_spread3")
expand_mode = 1
stretch_mode = 5

[node name="LeftPage" type="Control" parent="JournalContainer/Spread3_Diary2"]
layout_mode = 1
anchor_left = 0.08
anchor_top = 0.1
anchor_right = 0.47
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="RightPage" type="Control" parent="JournalContainer/Spread3_Diary2"]
layout_mode = 1
anchor_left = 0.53
anchor_top = 0.1
anchor_right = 0.92
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
